# C12_GimbalControl

./: .gitignore  CMakeLists.txt  Readme.md
.github/workflows/: build.yml
src/: gimbal_ctrl.cc  gimbal_ctrl.h  main.cc
src/loguru/: Readme.md
src/practical_socket/: PracticalSocket.cc  PracticalSocket.h
